# a2g-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: langchain_a2g.py
integrations/: README.md
integrations/claude-agent-sdk/: a2g_claude_agents.py
integrations/crewai/: a2g_crewai.py
integrations/langchain/: a2g_langchain.py  requirements.txt
integrations/mcp-server/: a2g_mcp_server.py
integrations/openai-agents/: a2g_openai_agents.py
integrations/shared/: __init__.py  a2g_client.py
src/: authority.rs  enforce.rs  identity.rs  ledger.rs  lib.rs  lineage.rs  main.rs  mandate.rs  output_gov.rs  proposal.rs  receipt.rs  test_harness.rs  trust_summary.rs  visual_receipt.rs
tests/: battle_test.sh  policy-suite.toml
